--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="dev_email">jamied113@gmail.com</string>
     <string name="contact_the_dev">Contact the Developer at: jamied113@gmail.com</string>
     <string name="reddit_android">Reddit Android</string>
+    <string name="Login">Login</string>
+    <string name="Subreddits">Subreddits</string>
 
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
