--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_comment">CommentActivity</string>
     <string name="login_to_reddit">Login to Reddit</string>
     <string name="title_activity_delete_me">Sign in</string>
     <string name="dev_email">jamied113@gmail.com</string>
