--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="contact_the_dev">Contact the Developer at: jamied113@gmail.com</string>
     <string name="reddit_android">Reddit Android</string>
     <string name="Login">Login</string>
+    <string name="Traffic">Traffic</string>
     <string name="Subreddits">Subreddits</string>
 
     <!-- Strings related to login -->
